force-app/main/default/objects/Mould_Life_Tracker__c/Mould_Life_Tracker__c.object-meta.xml
<CustomObject>
    <label>Mould Life Tracker</label>
    <nameField>
        <label>Mould Life Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mould Life Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>