force-app/main/default/objects/Mould_Life_Tracker__c/fields/Accounts_have_been_informed_to_invoice23__c.field-meta.xml
<CustomField>
    <fullName>Accounts_have_been_informed_to_invoice23__c</fullName>
    <label>Accounts have been informed to invoice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>