force-app/main/default/objects/Mould_Life_Tracker__c/fields/Bottle_Number_8__c.field-meta.xml
<CustomField>
    <fullName>Bottle_Number_8__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bottle Number</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Mould Life Trackers</relationshipLabel>
    <relationshipName>Mould_Life_Trackers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>