force-app/main/default/objects/Mould_Life_Tracker__c/fields/Comments_on_Cost_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comments_on_Cost_to_Customer__c</fullName>
    <label>Comments on Cost to Customer</label>
    <type>TextArea</type>
</CustomField>