force-app/main/default/objects/Mould_Life_Tracker__c/fields/Container_GOBS_Produced_000s_12__c.field-meta.xml
<CustomField>
    <fullName>Container_GOBS_Produced_000s_12__c</fullName>
    <label>Container/GOBS Produced (000s)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>