force-app/main/default/objects/Mould_Life_Tracker__c/fields/Container_GOBS_Remaining_000s_13__c.field-meta.xml
<CustomField>
    <fullName>Container_GOBS_Remaining_000s_13__c</fullName>
    <label>Container/GOBS Remaining (000s)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>