force-app/main/default/objects/Mould_Life_Tracker__c/fields/Cost_of_Set_Mould_Equipment_When_New_20__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Set_Mould_Equipment_When_New_20__c</fullName>
    <label>Cost of Set Mould Equipment When New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>