force-app/main/default/objects/Mould_Life_Tracker__c/fields/Customer_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mould Life Trackers</relationshipLabel>
    <relationshipName>Mould_Life_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>