force-app/main/default/objects/Mould_Life_Tracker__c/fields/Description_5__c.field-meta.xml
<CustomField>
    <fullName>Description_5__c</fullName>
    <label>Bottle Description</label>
    <type>TextArea</type>
</CustomField>