force-app/main/default/objects/Mould_Life_Tracker__c/fields/Design_Team_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Design_Team_Approval_Status__c</fullName>
    <label>Design Team Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>