force-app/main/default/objects/Mould_Life_Tracker__c/fields/Glass_Account_Manager_24__c.field-meta.xml
<CustomField>
    <fullName>Glass_Account_Manager_24__c</fullName>
    <formula>Customer_Name_3__r.Owner.FirstName + &quot; &quot; + Customer_Name_3__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the related Accounts Owner</inlineHelpText>
    <label>Glass Account Manager</label>
    <type>Text</type>
</CustomField>