force-app/main/default/objects/Mould_Life_Tracker__c/fields/Has_this_container_been_replaced_19__c.field-meta.xml
<CustomField>
    <fullName>Has_this_container_been_replaced_19__c</fullName>
    <label>Has this container been replaced?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>