force-app/main/default/objects/Mould_Life_Tracker__c/fields/How_much_is_the_customer_being_charged__c.field-meta.xml
<CustomField>
    <fullName>How_much_is_the_customer_being_charged__c</fullName>
    <label>How much is the customer being charged?</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>