force-app/main/default/objects/Mould_Life_Tracker__c/fields/How_to_Edit__c.field-meta.xml
<CustomField>
    <fullName>How_to_Edit__c</fullName>
    <formula>&quot;To Edit any information displayed here, please click the Mould Name field click the edit button.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How to Edit</label>
    <type>Text</type>
</CustomField>