force-app/main/default/objects/Mould_Life_Tracker__c/fields/Maximum_Container_GOBS_Production_000_11__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Container_GOBS_Production_000_11__c</fullName>
    <label>Maximum Container/GOBS Production (000s)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>