force-app/main/default/objects/Mould_Life_Tracker__c/fields/Mould_equipment_configuration_10__c.field-meta.xml
<CustomField>
    <fullName>Mould_equipment_configuration_10__c</fullName>
    <label>Mould Equipment Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIS SG</fullName>
            </value>
            <value>
                <fullName>AIS DG</fullName>
            </value>
            <value>
                <fullName>AIS Tandem</fullName>
            </value>
            <value>
                <fullName>AIS TG</fullName>
            </value>
            <value>
                <fullName>NIS DG</fullName>
            </value>
            <value>
                <fullName>NIS DG/TG</fullName>
            </value>
            <value>
                <fullName>NIS TG</fullName>
            </value>
            <value>
                <fullName>NIS QG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>