force-app/main/default/objects/Mould_Life_Tracker__c/fields/Mould_Equipment_Scrapped__c.field-meta.xml
<CustomField>
    <fullName>Mould_Equipment_Scrapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mould Equipment Scrapped</label>
    <type>Checkbox</type>
</CustomField>