force-app/main/default/objects/Mould_Life_Tracker__c/fields/Mould_Life_Remaining_14__c.field-meta.xml
<CustomField>
    <fullName>Mould_Life_Remaining_14__c</fullName>
    <label>Mould % Life Remaining</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>