force-app/main/default/objects/Mould_Life_Tracker__c/fields/Mould_Number_7__c.field-meta.xml
<CustomField>
    <fullName>Mould_Number_7__c</fullName>
    <label>Mould Number</label>
    <type>TextArea</type>
</CustomField>