force-app/main/default/objects/Mould_Life_Tracker__c/fields/Mould_Number_Set_Letter_9__c.field-meta.xml
<CustomField>
    <fullName>Mould_Number_Set_Letter_9__c</fullName>
    <label>Mould Number Set Letter</label>
    <type>TextArea</type>
</CustomField>