force-app/main/default/objects/Mould_Life_Tracker__c/fields/Number_of_Blank_Moulds_to_be_Scrapped__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Blank_Moulds_to_be_Scrapped__c</fullName>
    <label>Number of Blank Moulds to be Scrapped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>