force-app/main/default/objects/Mould_Life_Tracker__c/fields/Number_of_Moulds_to_be_scrapped_16__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Moulds_to_be_scrapped_16__c</fullName>
    <label>Number of Blow Moulds to be Scrapped</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>