force-app/main/default/objects/Mould_Life_Tracker__c/fields/Reason_for_Mould_Retirement_18__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Mould_Retirement_18__c</fullName>
    <inlineHelpText>Are the blank moulds being used for another job - if yes record mould number and set letter</inlineHelpText>
    <label>Reason for Mould Retirement?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>