force-app/main/default/objects/Mould_Life_Tracker__c/fields/Remaining_Value_of_Mould_Equipment_21__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Value_of_Mould_Equipment_21__c</fullName>
    <formula>Mould_Life_Remaining_14__c * Cost_of_Set_Mould_Equipment_When_New_20__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Value of Mould Equipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>