force-app/main/default/objects/Mould_Life_Tracker__c/fields/Remind_me_in_6_months_to_review_again__c.field-meta.xml
<CustomField>
    <fullName>Remind_me_in_6_months_to_review_again__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>WARNING - Mould Storage may start to cost after 6 months</inlineHelpText>
    <label>Remind Owner in 6 months to review again</label>
    <type>Checkbox</type>
</CustomField>