force-app/main/default/objects/Mould_Life_Tracker__c/fields/Replacement_Container_Drawing_19__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Container_Drawing_19__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replacement Container Drawing</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Mould Life Trackers (Replacement Container Drawing)</relationshipLabel>
    <relationshipName>Replaced_Mould_Life_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>