force-app/main/default/objects/Mould_Life_Tracker__c/fields/Replacement_Set_of_Mould_Available_17__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Set_of_Mould_Available_17__c</fullName>
    <label>Replacement Set of Mould Available?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>