force-app/main/default/objects/Mould_Life_Tracker__c/fields/Sales_Organisation_4__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organisation_4__c</fullName>
    <formula>TEXT (Owner:User.Sales_Organisation_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Organisation</label>
    <type>Text</type>
</CustomField>