force-app/main/default/objects/Mould_Life_Tracker__c/fields/Site_2__c.field-meta.xml
<CustomField>
    <fullName>Site_2__c</fullName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Corsico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>