force-app/main/default/objects/Mould_Life_Tracker__c/fields/Submit_to_Mould_Shop__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_Mould_Shop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit to Mould Shop</label>
    <type>Checkbox</type>
</CustomField>