force-app/main/default/objects/Mould_Life_Tracker__c/fields/Submitter_Id__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Id__c</fullName>
    <label>Submitter Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>