force-app/main/default/objects/Mould_Life_Tracker__c/fields/Trial_or_Production_Mould_Equipment_6__c.field-meta.xml
<CustomField>
    <fullName>Trial_or_Production_Mould_Equipment_6__c</fullName>
    <label>Trial or Production Mould Equipment?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>