force-app/main/default/objects/Mould_Life_Tracker__c/fields/Who_is_paying_Residual_Cost_of_Mould_22__c.field-meta.xml
<CustomField>
    <fullName>Who_is_paying_Residual_Cost_of_Mould_22__c</fullName>
    <label>Who is paying Residual Cost of Mould</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Encirc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>