force-app/main/default/objects/Mould_Life_Tracker__c/recordTypes/Account_Manager_Commercial_obsolete.recordType-meta.xml
<RecordType>
    <fullName>Account_Manager_Commercial_obsolete</fullName>
    <active>true</active>
    <label>Account Manager – Commercial obsolete</label>
</RecordType>