force-app/main/default/objects/Mould_Life_Tracker__c/recordTypes/Design_Commercial_obsolete.recordType-meta.xml
<RecordType>
    <fullName>Design_Commercial_obsolete</fullName>
    <active>true</active>
    <label>Design – Commercial obsolete</label>
</RecordType>