force-app/main/default/objects/Mould_Life_Tracker__c/recordTypes/Design_Technologically_obsolete.recordType-meta.xml
<RecordType>
    <fullName>Design_Technologically_obsolete</fullName>
    <active>true</active>
    <label>Design – Technologically obsolete</label>
</RecordType>