force-app/main/default/objects/Mould_Life_Tracker__c/recordTypes/Mould_Shop_Obsolete_Moulds.recordType-meta.xml
<RecordType>
    <fullName>Mould_Shop_Obsolete_Moulds</fullName>
    <active>true</active>
    <label>Mould Shop - Obsolete Moulds</label>
</RecordType>