force-app/main/default/objects/Mould_Life_Tracker__c/validationRules/Replaced_Moulds_Need_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Replaced_Moulds_Need_Lookup</fullName>
    <active>true</active>
    <description>If the container has been replaced, users need to enter the replacement drawing lookup</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Has_this_container_been_replaced_19__c, &apos;Yes&apos;),
 ISBLANK(Replacement_Container_Drawing_19__c)
)</errorConditionFormula>
    <errorDisplayField>Replacement_Container_Drawing_19__c</errorDisplayField>
    <errorMessage>Please specify the Replacement Container Drawing</errorMessage>
</ValidationRule>