force-app/main/default/objects/Mould_Life_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Manager_Approval_Status__c</columns>
    <columns>Design_Team_Approval_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Glass_Account_Manager_24__c</columns>
    <columns>Customer_Name_3__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>