force-app/main/default/objects/Mould_Life_Tracker__c/listViews/Mould_Tracking_Design_Team_Mould_Life_Tracker.listView-meta.xml
<ListView>
    <fullName>Mould_Tracking_Design_Team_Mould_Life_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>Mould Tracking Design Team</label>
    <queue>Mould_Tracking_Design_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>